Objenesis bootstrapping agreement, 2024-05-06
Signed-off-by: Henri Tremblay <henri.tremblay@gmail.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -47,6 +47,8 @@ egc:
     login: gavinking
   - project: sdkman
     login: marc0der
+  - project: objenesis
+    login: henri-tremblay
   - project: ...
     login: ...
 
