--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -45,6 +45,8 @@ egc:
       https://raw.githubusercontent.com/FasterXML/jackson/master/images/cowtowncoder-2013-06-19.jpg
   - project: hibernate
     login: gavinking
+  - project: sdkman
+    login: marc0der
   - project: ...
     login: ...
 
