EasyMock bootstrapping agreement, 2024-05-24
Signed-off-by: Henri Tremblay <henri.tremblay@gmail.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -49,6 +49,8 @@ egc:
     login: marc0der
   - project: objenesis
     login: henri-tremblay
+  - project: easymock
+    login: henri-tremblay
   - project: ...
     login: ...
 
