Feign bootstrapping agreement, 2024-05-27
Signed-off-by: Marvin Froeder <velo.br@gmail.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -51,6 +51,8 @@ egc:
     login: henri-tremblay
   - project: easymock
     login: henri-tremblay
+  - project: feign
+    login: velo
   - project: ...
     login: ...
 
