--- a/agreements/membership/members.yaml
+++ b/agreements/membership/members.yaml
@@ -48,7 +48,7 @@ attestations:
       I have read the following sections of the Commonhaus Foundation Bylaws:
       - [CF Council](https://www.commonhaus.org/bylaws/cf-council.html).
       - [Decision Making](https://www.commonhaus.org/bylaws/decision-making.html)
-      - [Voting](https://www.commonhaus.org/bylaws/3-cf-council.md#voting)
+      - [Voting](https://www.commonhaus.org/bylaws/cf-council.md#voting)
       - [Electronic Participation and Voting](https://www.commonhaus.org/bylaws/cf-council.html#electronic-participation-and-decision-making)
 
       I agree to:
@@ -60,10 +60,10 @@ attestations:
     title: "EGC Responsibilities"
     body: |
       I have read the following sections of the Commonhaus Foundation Bylaws:
-      - [Project Representation](https://www.commonhaus.org/bylaws/2-cf-membership.md#project-representation)
-      - [Composition of the EGC](https://www.commonhaus.org/bylaws/3-cf-council.md#extended-governance-committee-egc)
+      - [Project Representation](https://www.commonhaus.org/bylaws/cf-membership.md#project-representation)
+      - [Composition of the EGC](https://www.commonhaus.org/bylaws/cf-council.md#extended-governance-committee-egc)
       - [Decision Making](https://www.commonhaus.org/bylaws/decision-making.html)
-      - [Matters requiring EGC approval](https://www.commonhaus.org/bylaws/3-cf-council.md#matters-requiring-egc-approval)
+      - [Matters requiring EGC approval](https://www.commonhaus.org/bylaws/cf-council.md#matters-requiring-egc-approval)
       - [Electronic Participation and Voting](https://www.commonhaus.org/bylaws/cf-council.html#electronic-participation-and-decision-making)
 
       I agree to participate in EGC discussions and votes, and to represent the interests of my project and the Commonhaus Foundation community.
@@ -74,10 +74,7 @@ attestations:
       I have read the [Code of Conduct](https://www.commonhaus.org/policies/code-of-conduct/) and agree to adhere to its terms.
 
   email:
-    title: "Commonhaus email address"
+    title: "Terms of Service"
     body: |
-      I have read the [Forward Email Terms of Service](https://forwardemail.net/en/terms) and agree to adhere to its terms when using my `commonhaus.dev` email address.
-
-      > [!NOTE]
-      > If you accept these terms, a `commonhaus.dev` email address will be created for your GitHub login if it
-      > does not already exist. It will initially forward to the public address listed in your GitHub profile.
+      I have read the [Forward Email Terms of Service](https://forwardemail.net/en/terms) and agree to adhere to its terms when using Commonhaus
+      Foundation email addresses.
