--- a/agreements/membership/members.yaml
+++ b/agreements/membership/members.yaml
@@ -1,4 +1,4 @@
-version: "cf-YYYY-MM-DD"
+version: "cf-2024-05-31"
 
 rolePriority:
   - cfc
@@ -80,7 +80,7 @@ attestations:
       I have read the [Code of Conduct](https://www.commonhaus.org/policies/code-of-conduct/) and agree to adhere to its terms.
 
   email:
-    version: "fe-YYYY-MM-DD"
+    version: "fe-2024-05-31"
     title: "Terms of Service"
     body: |
       I have read the [Forward Email Terms of Service](https://forwardemail.net/en/terms) and agree to adhere to its terms when using Commonhaus
