Update Ken's bio

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -19,7 +19,7 @@ cf-council:
   - login: kenfinnigan
     term-start: 2023
     role: Secretary
-    bio: Open source engineer, observability, OpenTelemetry, author, amateur genealogist. Currently lumigo.io
+    bio: Open source engineer, observability, OpenTelemetry, author, amateur genealogist. Currently on a break.
 
 #--------------------------------------------------------------------------
 # EGC Project Representatives (appointed by project governance process)
