Apply suggestions from code review
adding quarkus for bootstrap

add missing files

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -54,6 +54,8 @@ egc:
   - project: feign
     login: velo
     bio: Java geek and open-source enthusiast, leading projects here and there. Feign lead, QueryDSL stalwart, and Commonhaus advocate.
+  - project: quarkus
+    login: dandreadis
   - project: ...
     login: ...
 
