--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -56,6 +56,8 @@ egc:
     bio: Java geek and open-source enthusiast, leading projects here and there. Feign lead, QueryDSL stalwart, and Commonhaus advocate.
   - project: quarkus
     login: dandreadis
+  - project: maveniverse
+    login: cstamas
   - project: ...
     login: ...
 
