OTC Framework bootstrapping agreement, 2024-08-21

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -56,8 +56,8 @@ egc:
     bio: Java geek and open-source enthusiast, leading projects here and there. Feign lead, QueryDSL stalwart, and Commonhaus advocate.
   - project: quarkus
     login: dandreadis
-  - project: ...
-    login: ...
+  - project: otcframework
+    login: frank-a-otc
 
 #--------------------------------------------------------------------------
 # Advisory Board members (appointed)
