--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "yaml": "node .github/validate.js ./SUPPORTERS.yaml ./CONTACTS.yaml ./PROJECTS.yaml ./agreements/membership/members.yaml"
   },
   "devDependencies": {
-    "markdown-link-check": "^3.11.2",
-    "markdownlint-cli2": "^0.12.1",
+    "markdown-link-check": "^3.12.2",
+    "markdownlint-cli2": "^0.13.0",
     "yaml": "^2.3.4"
+  },
+  "overrides": {
+    "markdownlint-cli2": {
+      "markdownlint": "^0.35.0",
+      "micromatch": "^4.0.8"
+    }
   }
 }
